<resources>
    <string name="app_name">BasKita Pemandu</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Nama Pengguna</string>
    <string name="prompt_password">Kata Laluan</string>
    <string name="action_sign_in">Log Masuk</string>
    <string name="action_sign_out">Log Keluar</string>
    <string name="startyourjourney">Mulakan Perjalanan Anda </string>
    <string name="selectyourjourney">Pilih Perjalanan Anda </string>
    <string name="welcome">Selamat Datang</string>
    <string name="action_submit">Hantar</string>
    <string name="action_next">Seterusnya</string>
    <string name="action_sign_up">Daftar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Alamat Emel ini tidak sah!</string>
    <string name="error_invalid_password">Kata Laluan terlalu singkat</string>
    <string name="error_incorrect_password">Kata Laluan ini tidak sah!</string>
    <string name="error_field_required">Ruangan ini diperlukan</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="select_bus">Pilih Bas</string>
    <string name="select_route">Pilih Laluan/Zon</string>
    <string name="hint_search_text">Loading..</string>
    <string name="loading">Please wait loading..</string>
    <string name="title">Lorem ipsum</string>
    <string name="search_bus">Cari Nombor Plat Bas..</string>
    <string name="search_route">Cari Laluan/Zon..</string>
    <string name="journey_overview">Gambaran Perjalanan </string>
    <string name="start_journey">Mula</string>
    <string name="report_issues">Buat Laporan</string>
    <string name="resume_journey">Sambung</string>
    <string name="stop_journey">Tamat</string>
    <string name="journey_icon">Journey Icon</string>
    <string name="user">User</string>
    <string name="journey_detail">Maklumat Perjalanan </string>
    <string name="details">Butiran</string>
    <string name="next_bus_stop_null">Hentian Bas Seterusnya (Menanti)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_up">Sedang Ditetapkan..</string>
    <string name="checking_connectivity">Memeriksa Sambungan..</string>
    <string name="setting_up_route">Laluan sedang ditetapkan</string>
    <string name="waiting">Menanti</string>
    <string name="setting_up_bus">Bas sedang ditetapkan</string>
    <string name="setting_up_driver">Pemandu sedang ditetapkan</string>
    <string name="fail">Gagal</string>
    <string name="success">Berjaya</string>
    <string name="check_internet">Please check your Internet</string>
    <string name="stop_your_journey">Tamatkan Perjalanan Anda?</string>
    <string name="cancel_current_progress">Hentikan Progres Anda??</string>
    <string name="start_your_journey">Mulakan Perjalanan Anda?</string>
    <string name="please_stop_journey">Sila Tamatkan Perjalanan Anda</string>
    <string name="please_wait">Sila tunggu proses penyediaan selasai</string>
    <string name="gps_off">GPS di nyah aktif</string>
    <string name="select_bus_n_route">Sila pilih bas dan laluan</string>
    <string name="internet_off">Internet di nyah aktif</string>
    <string name="error_connectivity">Sila semak sambungan jaringan anda</string>
    <string name="error_credential">Sila semak nama pengguna dan kata laluan</string>
    <string name="error_server">Sorry our Servers are currently down</string>
    <string name="error_opss">Oopss! something went wrong</string>
    <string name="finish_journey">Perjalanan anda sudah lengkap</string>
    <string name="url_login">http://api.myxlab.solutions/api/v1/authenticate</string>
    <string name="url_bus">http://api.myxlab.solutions/api/v1/sopir</string>
    <string name="url_route">http://api.myxlab.solutions/api/v1/way</string>
    <string name="url_driver">http://api.myxlab.solutions/api/v1/sopirlog</string>
    <string name="url_bus_location">http://api.myxlab.solutions/api/v1/translocate</string>
    <string name="url_bus_status">http://api.myxlab.solutions/api/v1/transtatus</string>
    <string name="url_alert">http://api.myxlab.solutions/api/v1/adu</string>
    <string name="url_bus_stop">http://api.myxlab.solutions/api/v1/terminal</string>
    <string name="url_bus_log">http://api.myxlab.solutions/api/v1/translocatelog</string>
    <string name="url_dummy">http://vbus.myxlab.solutions/dummybus.php</string>
    <string name="new_user">Bukan Ahli Lagi? Daftar di sini.</string>
    <string name="show_pwd">Tunjuk Kata Laluan</string>
    <string name="hide_pwd">Sembunyi Kata Laluan</string>
    <string name="prompt_subject">Subjek</string>
    <string name="prompt_message">Mesej</string>
    <string name="report_problems">Laporkan Masalah</string>
     <string name="wallapop">M874.323897,513.518484 C860.358769,445.332884 816.382769,412.921263
    805.267282,406.191832 C800.657846,403.400084 797.676103,399.358653 797.88841,392.435874
    C801.757128,267.085474 710.243077,158.867537 582.509333,159.174063 C500.917128,159.372126
    449.925538,194.844295 407.832,243.511242 C403.062154,249.028716 394.697231,248.443958
    388.219487,245.076884 C305.763897,202.332968 207.573949,231.137011 166.022974,310.371705
    C130.01559,379.038316 144.36759,457.320421 202.808821,508.302821 C208.923282,513.617516
    210.187692,522.950063 205.809436,529.764379 C154.784821,609.4848 177.973538,715.561768
    257.71159,766.5536 C301.140308,794.348463 354.773949,801.186358 403.746256,785.058358
    C412.384821,782.544842 418.650256,785.063074 422.839795,791.594442 C475.761026,869.508716
    581.966769,891.790821 661.275487,840.157642 C704.27959,812.16 732.742974,766.610189
    738.87159,715.679663 C739.626462,709.492547 743.735795,703.578947 749.779487,702.036884
    C867.836718,671.8464 884.052308,561.025347 874.323897,513.518484 L874.323897,513.518484 Z
    M684.063179,687.984084 C683.473436,709.638989 676.924923,730.600674 665.106462,748.761179
    C629.740718,803.1248 556.985231,818.521853 502.596718,783.172295 C448.212923,747.822737
    432.808821,675.095832 468.174564,620.727495 C475.581744,609.466189 472.397128,594.361516
    461.111795,587.042611 C449.826462,579.704842 434.342154,582.647495 427.005744,593.937095
    C401.193846,629.234779 389.229128,672.785095 394.371692,716.292968 C395.376615,724.753095
    389.644308,732.548295 381.274667,734.236547 C352.188513,740.126568 321.941744,735.278737
    296.134564,720.631495 C237.032821,687.0928 216.316308,612.026863 249.865641,552.938021
    C253.578667,546.401937 260.542359,542.450105 268.388308,544.477895 C283.509333,548.674947
    299.139897,550.693305 314.831795,550.547116 C327.188103,550.448084 337.114667,540.361011
    337.01559,528.000926 C336.916513,516.282189 327.758974,506.624253 316.053744,505.883874
    C293.964308,504.488 273.483692,499.748632 255.404513,486.964126 C200.129026,447.874947
    190.947897,375.662063 229.285949,323.340379 C265.873641,273.400168 339.294706,263.102494
    392.32445,305.252221 C392.557946,305.437801 394.130815,307.005964 394.371699,307.181664
    C404.775463,314.770126 422.862026,310.613648 428.736673,299.141666 C440.24375,276.656781
    458.521641,261.568253 468.075487,254.626611 C543.430564,199.885726 639.874872,207.945011
    700.349538,278.762021 C762.522667,351.564379 752.445128,457.796968 673.579897,521.469558
    C663.106051,529.924968 662.237949,545.755874 671.055795,555.946695 C679.43959,565.647074
    694.447385,567.340042 704.685333,559.615579 C731.558769,539.328253 756.507282,511.646568
    771.939692,481.7296 C773.345641,478.985011 775.737641,475.754695 778.398564,474.2032
    C786.183179,469.577011 796.180513,473.241179 800.799385,481.022232 C810.357949,497.159663
    818.708718,521.238484 819.793846,539.955453 C823.549333,604.698526 772.458667,660.344842
    707.700103,664.112758 C692.470564,664.706947 684.119795,673.341558 684.063179,687.984084 Z
  </string>
</resources>