<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.driverapp.View.SetupFragment"
    android:background="@color/transparent_grey">

    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="@dimen/large_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:paddingTop="@dimen/medium_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_up"/>

                <TextView
                    android:textColor="@color/grey"
                    android:id="@+id/setup_detail_tv"
                    android:text="@string/setting_up"
                    android:visibility="invisible"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>


            <RelativeLayout
                android:paddingTop="@dimen/medium_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginRight="@dimen/xlarge_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checking_connectivity"/>

                <RelativeLayout
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/checking_con_tv"
                        android:visibility="invisible"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waiting"/>

                    <ProgressBar
                        android:id="@+id/checking_con_progress"
                        android:visibility="visible"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/progressBarStyleSmall"/>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:paddingTop="@dimen/medium_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginRight="@dimen/xlarge_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_up_driver"/>

                <RelativeLayout
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/setup_driver_tv"
                        android:visibility="visible"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waiting"/>

                    <ProgressBar
                        android:id="@+id/setup_driver_progress"
                        android:visibility="invisible"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/progressBarStyleSmall"/>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:paddingTop="@dimen/medium_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginRight="@dimen/xlarge_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_up_bus"/>

                <RelativeLayout
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/setup_bus_tv"
                        android:visibility="visible"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waiting"/>

                    <ProgressBar
                        android:id="@+id/setup_bus_progress"
                        android:visibility="invisible"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/progressBarStyleSmall"/>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:paddingTop="@dimen/medium_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginRight="@dimen/xlarge_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_up_route"/>

                <RelativeLayout
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/setup_route_tv"
                        android:visibility="visible"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waiting"/>

                    <ProgressBar
                        android:id="@+id/setup_route_progress"
                        android:visibility="invisible"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/progressBarStyleSmall"/>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/close_fail_rl"
                android:visibility="gone"
                android:paddingTop="@dimen/medium_dp"
                android:layout_alignParentRight="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/close_fail_cv"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:padding="@dimen/dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CLOSE"/>

                </android.support.v7.widget.CardView>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
