<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_track"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.driverapp.View.TrackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/xlarge_dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:paddingBottom="@dimen/xlarge_dp"
            android:layout_alignParentTop="true"
            android:id="@+id/journey_title_tracker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_near_me" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium_dp"
                android:text="Start your journey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/journey_title_tracker"
            android:id="@+id/user_icon_tracker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_weight="3.5"
                android:layout_alignParentLeft="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_directions"/>

                <TextView
                    android:id="@+id/track_next_bus"
                    android:paddingRight="@dimen/large_dp"
                    android:paddingLeft="@dimen/medium_dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_bus_stop_null"/>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:onClick="showDetailsJourney"
                android:layout_margin="@dimen/dp"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:layout_alignParentRight="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_assignment"/>

                    <TextView
                        android:maxLines="1"
                        android:paddingRight="@dimen/large_dp"
                        android:paddingLeft="@dimen/medium_dp"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <com.bcgdv.asia.lib.ticktock.TickTockView
            android:layout_centerInParent="true"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_gravity="center"
            app:tickCircleDuration="total_time"
            android:id="@+id/count"
            app:tickAutoFitText="true"
            app:tickMiddleColor="@color/grey"
            app:tickTextColor="@color/white"
            app:tickDotRadius="9dp"
            app:tickEmptyRingColor="@color/light_grey"
            app:tickFillRingColor="@color/colorAccent"
            app:tickRingThickness="9dp"
            android:layout_marginBottom="@dimen/xlarge_dp"
            android:layout_marginTop="@dimen/xlarge_dp"/>

        <Button
            android:layout_alignParentBottom="true"
            android:onClick="startJourney"
            android:textColor="@color/white"
            android:background="@color/green"
            android:id="@+id/start_track_journey_btn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_journey"
            android:textStyle="bold" />

        <ImageView
            android:layout_centerInParent="true"
            android:contentDescription="@string/journey_icon"
            android:id="@+id/tracker_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_near_me_white"/>


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/setup_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
